HTML5バリデーションエラーが起きていた箇所を修正。

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -23,7 +23,7 @@
 		<p>
 			サイトマップCSVは次のパスに置かれています。<br />
 		</p>
-		<div class="code"><pre><code>./_PX/sitemaps/</code></code></pre></div>
+		<div class="code"><pre><code>./_PX/sitemaps/</code></pre></div>
 
 	</div></div>
 	<div class="cols-col cols-1of3"><div class="cols-pad">
@@ -32,7 +32,7 @@
 			テーマは、コンテンツエリア以外のHTMLソースを生成するPHPテンプレートです。<br />
 			次のパスに置かれています。<br />
 		</p>
-		<div class="code"><pre><code>./_PX/themes/</code></code></pre></div>
+		<div class="code"><pre><code>./_PX/themes/</code></pre></div>
 		<p class="small">
 			テーマは、複数登録して切り替えてプレビューすることができます。パラメータに <a href="?PX=themes">?PX=themes</a> をつけてアクセスすると、テーマを選択する画面が開きます。<br />
 		</p>
@@ -55,7 +55,7 @@
 	あとは、ボタンを押すだけ。<br />
 	しばらくすると、次のパスに生成されます。<br />
 </p>
-<div class="code"><pre><code>./_PX/_sys/publish/</code></code></pre></div>
+<div class="code"><pre><code>./_PX/_sys/publish/</code></pre></div>
 
 <h2>コーディング規則 と ドキュメントモジュール定義</h2>
 <p>
