.htaccessの設定を修正。PHPの設定をすべてコメントアウトした。
- display_errors の設定も、環境の設定に従うようにした。

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -43,6 +43,10 @@
 			コンテンツは、コンテンツエリアのソースだけが記述されたシンプルなHTMLファイルです。<br />
 			サイトマップの path 欄に登録したパスにHTMLファイルを作成してください。<br />
 		</p>
+		<p>
+			あなたがいま見ているこのページは、テキストエディタで <code>/index.html</code> を開くとソースを確認できます。<br />
+			このページも、削除や上書きしてあなたのサイトのトップページに置き換えてください。<br />
+		</p>
 	</div></div>
 </div><!-- / .cols -->
 
