--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -57,25 +57,10 @@
 </p>
 <p>
 	あとは、ボタンを押すだけ。<br />
-	しばらくすると、次のパスに生成されます。<br />
+	しばらくすると、次のパスに、静的なHTMLファイルが生成されます。<br />
 </p>
 <div class="code"><pre><code>./_PX/_sys/publish/</code></pre></div>
 
-<h2>コーディング規則 と ドキュメントモジュール定義</h2>
-<p>
-	Pickles Framework では、 <a href="https://github.com/tomk79/FESS" target="_blank">FESS</a> が規定するコーディング規則およびドキュメントモジュール定義を利用しています。詳しくは次のページを参照してください。<br />
-</p>
-<ul>
-	<li><a href="docs/modules/">ドキュメントモジュール</a></li>
-</ul>
-
-<p>
-	これらのドキュメントは、次のファイルに記述されています。不要な場合削除してください。<br />
-</p>
-<ul>
-	<li>./docs/*</li>
-	<li>./_PX/sitemaps/_docs.csv</li>
-</ul>
 
 <h2>PXコマンドに関する注意事項</h2>
 <p>
