(HTMLの文法ミス修正

--- a/htdocs/sample_pages/index.html
+++ b/htdocs/sample_pages/index.html
@@ -11,7 +11,7 @@
 <p>
 	これらのサンプルコードは、サイトマップCSVに定義されています。サイトマップCSVは次のパスに配置されています。<br />
 </p>
-<ul><li></code>./_PX/sitemaps/sitemap.csv</code></li></ul>
+<ul><li><code>./_PX/sitemaps/sitemap.csv</code></li></ul>
 <p>
 	このファイル3行目以降は、サンプルページについて定義しています。<br />
 </p>
@@ -27,4 +27,3 @@
 <ul>
 	<li><a href="./fess/">FESSドキュメント</a></li>
 </ul>
-
