--- a/htdocs/_PX/themes/default/default.html
+++ b/htdocs/_PX/themes/default/default.html
@@ -16,12 +16,14 @@
 		<meta name="keywords" content="<?php print t::h($page_info['keywords']); ?>" />
 		<meta name="description" content="<?php print t::h($page_info['description']); ?>" />
 		<meta name="viewport" content="width=device-width" />
-		<script src="<?php print t::h($px->theme()->href('/common/js/jquery-1.10.1.min.js')); ?>" type="text/javascript"></script>
 <?php
+	// ↓コンテンツの環境構築を読み込みます。
+	@include( $_SERVER['DOCUMENT_ROOT'].$px->theme()->href('/common/inc/contents_environment.nopublish.inc') );
+?>
+<?php
+	// ↓これはSSIの実装サンプルです。
 	print $px->ssi($px->theme()->href('/common/inc/common_setup.inc'));
 ?>
-		<link rel="stylesheet" href="<?php print t::h($px->theme()->href('/common/css/setup.css')); ?>" type="text/css" />
-		<link rel="stylesheet" href="<?php print t::h($px->theme()->href('/common/css/modules.css')); ?>" type="text/css" />
 		<link rel="stylesheet" href="<?php print t::h($px->path_theme_files('/css/common.css')); ?>" type="text/css" />
 <?php
 	//↓コンテンツから受け取った
