--- a/htdocs/_PX/themes/simple/default.html
+++ b/htdocs/_PX/themes/simple/default.html
@@ -83,9 +83,9 @@
 				</div><!-- /.theme_column2 -->
 			</div><!-- /.theme_middle -->
 			<div class="theme_footer">
-				<div class="right small">[<a href="#page_top" class="up">ページの先頭へ戻る</a>]</div>
+				<div class="theme_footer-page_top"><a href="#page_top" class="up">ページの先頭へ戻る</a></div>
 				<div class="breadcrumb"><?php print $px->theme()->mk_breadcrumb(); ?></div>
-				<div class="center">[<?php print $px->theme()->mk_link(''); ?>]</div>
+				<div><?php print $px->theme()->mk_link(''); ?></div>
 			</div><!-- /.theme_footer -->
 		</div><!-- /.theme_outline -->
 	</body>
