--- a/htdocs/_PX/themes/sample/popup.html
+++ b/htdocs/_PX/themes/sample/popup.html
@@ -27,7 +27,7 @@
 <div id="page_top">
 <div class="theme_outline">
 <div class="theme_header">
-	<div class="logo"><?php print t::h($px->get_conf('project.name')); ?></div>
+	<div class="theme_header-logo"><?php print t::h($px->get_conf('project.name')); ?></div>
 </div><!-- /.theme_header -->
 <div class="theme_middle">
 <div class="theme_column1">
@@ -46,8 +46,8 @@
 </div><!-- /.theme_column2 -->
 </div><!-- /theme_.middle -->
 <div class="theme_footer">
-	<div class="right small">[<a href="#page_top">ページの先頭へ戻る</a>]</div>
-	<div class="center">[<a href="javascript:window.close();">閉じる</a>]</div>
+	<div class="theme_footer-page_top">[<a href="#page_top">ページの先頭へ戻る</a>]</div>
+	<div>[<a href="javascript:window.close();">閉じる</a>]</div>
 </div><!-- /.theme_footer -->
 </div><!-- /.theme_outline -->
 </div><!-- /#page_top -->
