--- a/htdocs/_PX/themes/simple/popup.html
+++ b/htdocs/_PX/themes/simple/popup.html
@@ -45,8 +45,8 @@
 				</div><!-- /.theme_column2 -->
 			</div><!-- /.middle -->
 			<div class="theme_footer">
-				<div class="right small">[<a href="#page_top">ページの先頭へ戻る</a>]</div>
-				<div class="center">[<a href="javascript:window.close();">閉じる</a>]</div>
+				<div class="theme_footer-page_top"><a href="#page_top">ページの先頭へ戻る</a></div>
+				<div><a href="javascript:window.close();">閉じる</a></div>
 			</div><!-- /.footer -->
 		</div><!-- /.outline -->
 	</body>
