contents_manifesto のパスを変更。

--- a/htdocs/_PX/themes/default/top.html
+++ b/htdocs/_PX/themes/default/top.html
@@ -30,7 +30,7 @@
 		<meta name="viewport" content="width=device-width" />
 <?php
 	// ↓コンテンツの環境構築を読み込みます。
-	@include( $_SERVER['DOCUMENT_ROOT'].$px->theme()->href('/common/inc/contents_manifesto.nopublish.inc') );
+	@include( $_SERVER['DOCUMENT_ROOT'].$px->theme()->href('/common/contents_manifesto.nopublish.inc.php') );
 ?>
 <?php
 	// ↓これはSSIの実装サンプルです。
