--- a/htdocs/_PX/themes/simple/default.html
+++ b/htdocs/_PX/themes/simple/default.html
@@ -14,7 +14,7 @@
 		<meta name="description" content="<?php print t::h($page_info['description']); ?>" />
 <?php
 	// ↓コンテンツの環境構築を読み込みます。
-	@include( $_SERVER['DOCUMENT_ROOT'].$px->theme()->href('/common/inc/contents_manifesto.nopublish.inc') );
+	@include( $_SERVER['DOCUMENT_ROOT'].$px->theme()->href('/common/contents_manifesto.nopublish.inc.php') );
 ?>
 		<link rel="stylesheet" href="<?php print t::h($px->path_theme_files('/css/common.css')); ?>" type="text/css" />
 <?php
